同步于: 1月9日23时52分

--- a/pages/nf4514/n12676021.md
+++ b/pages/nf4514/n12676021.md
@@ -5,7 +5,7 @@
 
 
 
-<div><img alt="【更新】被推特永久取消账号 川普回应" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2021/01/trump-january-6-1200x800-600x400.jpg"/>
+<div><img alt="【更新】推特封川普账号 黑利：如中共行为" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2021/01/trump-january-6-1200x800-600x400.jpg"/>
 <div class="caption">
  推特宣布永久移除川普的个人账号，川普做出回应，表示考虑建立自己的平台。(Tasos Katopodis/Getty Images)
 </div></div><hr/>
