--- a/pages/p1/958569.md
+++ b/pages/p1/958569.md
@@ -1,4 +1,4 @@
-### 大午集团及28家子公司全被接管 网民：动了魔鬼的奶酪(组图)
+### 拼多多风波再起 一员工跳楼自杀惹议(组图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="" src="https://img3.secretchina.com/pic/2020/11-13/p2817301a715254900-ss.jpg"/>
+  <img alt="9日，一名拼多多员工在长沙家中跳楼自杀（图片来源：微博）" src="https://img3.secretchina.com/pic/2021/1-9/p2854191a778333101-ss.jpg" style="height:338px; width:600px"/>
   <br>
-   2020年11月11日，孙大午等人被抓走后，河北官方派出大批警力继续在大午集团维稳。（图片来源：网络）
+   9日，一名拼多多员工在长沙家中跳楼自杀（图片来源：微博）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,159 +29,182 @@
   </div>
  </div>
  <p>
-  【看中国2020年11月14日讯】（看中国记者苗薇综合报导）中国知名企业家
+  【看中国2021年1月9日讯】（看中国记者文俪综合报导）中国电商“
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/孙大午" target="_blank">
-    孙大午
+   <span href="https://www.secretchina.com/news/gb/tag/拼多多" target="_blank">
+    拼多多
    </span>
   </strong>
-  及近20名集团高管11日被当局抓捕后，真正的原因及被捕的细节外界一直不得而知。有知情人透露，
+  ”近期是一波未平一波又起，继不久前一位年轻女员工
   <strong>
-   大午集团
+   猝死
   </strong>
-  及28家子公司全被官方接管，同时，有关孙大午为员工和村民提供免费医疗等事迹也在网络热传，网民持续发声，谴责中共打压良心企业家。
+  之后，今日又爆出一名员工在长沙家中
+  <strong>
+   跳楼自杀
+  </strong>
+  的事件。至于跳楼原因，目前正在等待相关部门查明。网友纷纷表示：“他们公司到底发生了什么？曾经嘲笑富士康，现在你我皆是富士康。”
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  据自由亚洲电台引述《中国新闻周刊》13日最新报导，北京市友邦律师事务所主任赵光证实，警方在11日抓捕了28人，其中包括
-  <span href="https://zh.wikipedia.org/zh-hans/%E5%AD%99%E5%A4%A7%E5%8D%88" target="_blank">
-   孙大午
+  综合多家陆媒报导，1月9日晚，拼多多通报了一例员工今日在长沙家中
+  <span href="https://www.secretchina.com/news/gb/tag/跳楼自杀" target="_blank">
+   跳楼自杀
   </span>
-  夫妇、孙大午的两个儿子、两个儿媳等家人以及一些公司高管等，至11日下午，上述28人已经释放了4人。
+  的事件。拼多多发布公告表示，9日15时左右，该公司接到家属通知，公司员工谭某林在其家乡湖南省长沙市家中跳楼不幸身亡。
  </p>
- <p>
-  <span href="https://www.secretchina.com/news/gb/tag/大午集团" target="_blank">
-   大午集团
-  </span>
-  管理人员张先生告诉自由亚洲电台，现在该集团28家子公司都已经被官方接管。看来此前官方已经酝酿了很长时间，是各系统的统一行动，因为派来接管大午集团的一些人，具有企业背景。
- </p>
- <p>
-  张先生表示，当局只是说企业维稳，其它的不谈。也不让公司人员参加这个会嘛。公司还在营业，但是人心惶惶。
- </p>
- <p>
-  而徐水区委在回应采访时证实，大午集团是直接被保定市
-  <span href="https://www.secretchina.com/news/gb/tag/接管" target="_blank">
-   接管
-  </span>
-  了，徐水区除了参与维稳和做一些后勤，没有别的权限。该官员还强调，他们都不清楚接管大午集团的工作组的资讯。
- </p>
- <p>
-  据知情人透露，河北当局拟以涉黑罪名检控孙大午。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="text-align: center;">
-  <img alt="" src="https://img3.secretchina.com/pic/2020/11-13/p2817451a998680811-ss.jpg" style="height:337px; width:600px"/>
+ <p style="text-align:center">
+  <img alt="拼多多发布通告指，有员工在家中跳楼自杀（图片来源：网络）" src="https://img3.secretchina.com/pic/2021/1-9/p2854201a315499851-ss.jpg" style="height:554px; width:600px"/>
   <br>
-   孙大午的事迹及对自办医院（大午医院）定位的讲话视频也在网络热传。（图片来源：推特）
+   拼多多发布通告指，有员工在家中跳楼自杀（图片来源：网络）
   </br>
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
  <p>
-  近日关于孙大午在大午医院发表的一段视频讲话被持续刷屏，大午集团为员工和村民提供免费医疗等事迹也在网络热传。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  “赔钱可以干、比如大午医院，医院挣了钱是我的耻辱。因为我不缺钱，我办医院就是要你治病救人！最好的医院、最好的设备、最好的医生，你按这个宗旨给我办这个医院。”这是孙大午在今年疫情期间谈论办医院理念的一段话，感动了很多人。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  有评论认为，大午医院的做法断了公立医院的财路，触动了相关利益集团，或许也成为大午被当局逮捕的导火索。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  大午集团员工邓先生对大午医院为员工和村民提供近乎免费医疗的状况赞誉有加。他对自由亚洲电台说，网上关于大午先生禁止大午医院赚钱，医生只管救人的说法是真的。他透露，他是新员工，还是外地人，但每月只扣10来块钱，就可以用集团的医疗卡看病。像感冒发烧之类的看病拿药都免费。并且这种在全国都很少有的医疗福利，连周边的村民和职工家人都可以享受。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  据报导，当地官媒人士透露，孙大午提供免费医疗的做法，让当地政府和官办医院非常难堪。另一个让当地政府和官方医院尴尬的情况是，大午医院不但禁止医院赚患者的钱，来自北京一些著名医院的专家被孙大午的人格魅力感动，退休后自愿来大午医院做医生。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  而网友纷纷留言表示，“孙大午，河北保定人，在保定禹水开了一家医院，在医院门口写着八个大字：‘病人进门，医院全责’，医生说，出了医院事故怎么处理？孙大午说，那不是医生的问题，那是医院的问题！让他找院长（孙大午）！试问，除了大午，
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
+  公告指，谭某林，男，27岁，未婚，于2020年7月8日入职拼多多，是该公司的一名技术开发工程师。谭某林于8日上午向其主管请假，但并未说明请假原由。据其父表示，1月8日下午于
+  <span href="https://www.secretchina.com/news/gb/tag/长沙" target="_blank">
+   长沙
   </span>
-  有这样的医院院长吗？”、“让人敬佩！”“为了大多数，动了魔鬼的奶酪。”
+  机场接回儿子至家中，今日中午12点30分左右，谭某林从长沙27楼家中跳楼，当场离世。法医到场勘验后确认系自杀。
+ </p>
+ <p>
+  <span href="https://www.secretchina.com/news/gb/search?nohard=0&amp;q=%E6%8B%BC%E5%A4%9A%E5%A4%9A" target="_blank">
+   拼多多
+  </span>
+  表示，对谭某林的离世表示深切哀悼，目前正在等待相关部门查清事发原因。并表示，在此期间会配合其家人做了善后工作。
+ </p>
+ <p>
+  目前还尚不知，谭某林于家中自杀是个人原因还是与在拼多多的工作有关。但因前不久（去年12月29日），一名拼多多年轻女员工凌晨一点在下班路上
+  <span href="https://www.secretchina.com/news/gb/tag/猝死" target="_blank">
+   猝死
+  </span>
+  ，当时事件引发大量网友围观热议，有网友发现，该名女员工生前曾透过网络留言，批评中国现今的“资本主义文革，还真就全员韭菜”。该事件引发了网友对“拼多多”及该公司盼员工无休止工作的猛烈批评。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  而此次谭某林的离世距上次事件仅仅相隔不足半月，因此有网友认为肯定与工作时间长，压力大有关，也有网友认为跟离职被HR刁难有关：
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  “传统制造业落寞了，压榨劳动力的接力棒就到了互联网公司身上。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  “拼多多最近事有点多，为什么宁愿自杀都不离职？”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  “拼多多辞职卡流程多，各种不给辞职证明，搜一下关键词，这种卡离职的证据一大堆。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  “辞不了职，HR千方百计为难。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  “拼多多可以接棒富士康了，这么压榨员工，太黑心了。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  “富士康十二连跳的时候，还在读高中，现在是打工人了，面试10个公司，有9个是要加班的，你们还觉得学
+  <span href="https://www.secretchina.com/news/gb/tag/华为" target="_blank">
+   华为
+  </span>
+  、阿里是996福报吗？”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  “拼多多不觉得自己对那个半夜猝死的员工有什么责任，这种冰冷，让拼多多的员工看见她的现在，就是他的将来。人们总是擅长对社会抱有积极的期待，但这个社会总会抽过来一个耳光。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -200,7 +223,7 @@
   </ins>
  </center>
  <p>
-  还有的批评，“恶魔当道，善人无路。”“中共抓捕杀害的永远都是中国人的精英！”“有良心的企业家都被共产，还被扣上一顶3尺六的帽子去坐牢。”
+  “这位员工选在这个多事之秋自杀，在拼多多看来肯定是不够本分了。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -215,7 +238,7 @@
   </div>
  </center>
  <p>
-  有的则说，“一个有良知的好人，对人民这么好的做法，会影响利益中的人，肯定不被中共接纳！”“共产党不亡，中华无望！”
+  “希望可以查明真相。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -230,7 +253,7 @@
   </div>
  </center>
  <p>
-  大午集团被中共当局暴力打压后，《南方周末》这样评价孙大午，在中国，“问题富豪”落马，会牵出一连串的涉案政府官员，可孙大午案却没有一个官员因之受到牵连。在中国富豪阶层普遍社会声誉不佳的背景下，孙大午的出现，某种程度上简直是个奇迹。
+  “拼多多的行为感觉像极了全民传销。这哪里是拼多多，简直就是坑多多。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -245,7 +268,7 @@
   </div>
  </center>
  <p>
-  报导说，孙大午在他的家乡有着传奇般的声誉：他有亿万家产，却没有别墅，没有专车，住在集体宿舍里。生活极其简单，爱吃玉米饼子、大葱蘸酱，在外办事往往在路边小摊填饱肚子了事。不赶名牌，不上娱乐场所。一个月只拿2000元的工资。出差去宁夏，他坐硬座。
+  还有网友愤怒表示：“应届技术小伙2020年入职才半年就被逼跳楼，强烈要求上海市劳动局、上海市政府调查拼多多离职不给离职证明，必须无薪脱敏三个月，强制要求交出下家offer的恶劣行径。但凡员工有条退路，也不至于跳楼！”该网友还附上上海市劳动局的举报电话--02112333。并希望可以转发这条消息，让政府重视，拼多多违反劳动法的这些恶劣行径不遏制，迟早蔓延。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -260,41 +283,26 @@
   </div>
  </center>
  <p>
-  2003年的10月底，被羁押近半年的孙大午终于被地方法院以“非法吸收公众存款罪”判处有期徒刑3年，缓期4年执行。当时《南方周末》长篇报导这个有着严肃的道德诉求、律己甚严的农民企业家的性格和命运。孙大午本是一个亿万富翁，却过着苦行僧一般的生活，当了董事长还帮工人掏粪。他本该以追逐利润为第一要务，却办免费的农民技校、赔钱的中学，赔多少都不在乎。他深知商场官场潜规则，手中毫无政治资源可依仗，却不肯和光同尘，梗直倔强......
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="margin-bottom:12px;">
-  <hr style="border-top: 1px dashed  ;" width="100%"/>
-  <br/>
-  【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
+  根据《劳动法》第三十八条规定，聘用人的单位应该要保证劳动者每周至少休息一天。
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
   </span>
-  ：每位
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
-  <center>
-   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
-   </span>
-  </center>
+  劳动者每个月法定工作时间不可超过167个小时，如有超出部分，则必须支付员工加班费。但“拼多多”公司董事长黄峥曾在2020年10月表示，该公司全员都得要开启“硬核奋斗模式”。同期爆出该公司实施1个月工作300小时，采取“半个月休1天”工时制。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  时事评论人士蔡杰指出，中国政府长期缺乏劳工的法律保障：“所以这些企业，特别是近年兴起的所谓科技企业，他们采取大幅度加班或工作模式，最后导致天天加班的劳动者身体受到摧残。因为没有劳工组织，对劳工保护处于放任自由的状态。”
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -307,6 +315,43 @@
     </center>
    </div>
   </center>
+  <p>
+   来源:
+   <span href="/news/gb/tag/看中国  ">
+    看中国
+   </span>
+  </p>
+  <p>
+   本文短网址:
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb41Mn"/>
+   转载请注明出处，
+   <span style="color:red">
+    严禁建立镜像网站
+   </span>
+   .
+  </p>
+  <p style="margin-bottom:12px;">
+   <hr style="border-top: 1px dashed  ;" width="100%"/>
+   <br/>
+   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ：每位
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
+   <center>
+    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+    </span>
+   </center>
+  </p>
   <center>
    <div>
     <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
@@ -324,13 +369,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/952536.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/952536.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/952536.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/14/952536.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/958569.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/958569.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/958569.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2021/01/09/958569.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p1/952536.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p1/958569.md' width='0px' height='0px'/>
