--- a/pages/nsc412/n12676021.md
+++ b/pages/nsc412/n12676021.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【更新】推特封川普账号 黑利：如中共行为" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2021/01/trump-january-6-1200x800-600x400.jpg"/>
+<div><img alt="【更新】蓬佩奥：不能压制7500万选民声音" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/09/GettyImages-1210655095-600x400.jpg"/>
 <div class="caption">
- 推特宣布永久移除川普的个人账号，川普做出回应，表示考虑建立自己的平台。(Tasos Katopodis/Getty Images)
+ 美国国务卿蓬佩奥周六（1月9日）表示：“我们不能让他们压制7,500万美国人的声音，这里不是中共。”图为2020年4月22日，蓬佩奥于以色列演讲的档案照。(NICHOLAS KAMM/POOL/AFP via Getty)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
