同步于: 1月10日10时52分

--- a/pages/nf4514/n12676021.md
+++ b/pages/nf4514/n12676021.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【更新】蓬佩奥：不能压制7500万选民声音" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/09/GettyImages-1210655095-600x400.jpg"/>
+<div><img alt="【更新】苹果谷歌下架Parler应用程序" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2021/01/000_Par7882392-600x400.jpg"/>
 <div class="caption">
- 美国国务卿蓬佩奥周六（1月9日）表示：“我们不能让他们压制7,500万美国人的声音，这里不是中共。”图为2020年4月22日，蓬佩奥于以色列演讲的档案照。(NICHOLAS KAMM/POOL/AFP via Getty)
+ 周六晚（1月9日），苹果其iPhone App Store中删除了应用程序Parler，Parler受到川普支持者的欢迎。谷歌周五下架Parler。(Photo by EMMANUEL DUNAND and LOIC VENANCE / AFP)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
