--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -115005,4 +115005,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01101002)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01101051)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
