--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -115017,4 +115017,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01101202)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01101251)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
